@@ -125,15 +125,7 @@ public class DepthShader extends DefaultShader {
 				return false;
 		}
 		final boolean skinned = ((renderable.meshPart.mesh.getVertexAttributes().getMask() & Usage.BoneWeight) == Usage.BoneWeight);
-		if (skinned != (numBones > 0)) return false;
-		if (!skinned) return true;
-		int w = 0;
-		final int n = renderable.meshPart.mesh.getVertexAttributes().size();
-		for (int i = 0; i < n; i++) {
-			final VertexAttribute attr = renderable.meshPart.mesh.getVertexAttributes().get(i);
-			if (attr.usage == Usage.BoneWeight) w |= (1 << attr.unit);
-		}
-		return w == weights;
+		return skinned == (weights > 0);
 	}
 	
 	@Override
